add pages violation popup
